parser/src/snapshots/squawk_parser__parse__tests__parse_replica_identity_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterTableStmt(
                AlterTableStmt {
                    cmds: [
                        AlterTableCmd(
                            AlterTableCmd {
                                subtype: ReplicaIdentity,
                                name: None,
                                def: Some(
                                    ReplicaIdentityStmt(
                                        Object({
                                            "identity_type": String(
                                                "f",
                                            ),
                                        }),
                                    ),
                                ),
                                behavior: Restrict,
                                missing_ok: false,
                            },
                        ),
                    ],
                    relation: RangeVar {
                        catalogname: None,
                        schemaname: None,
                        relname: "aa",
                        inh: true,
                        relpersistence: "p",
                        alias: None,
                        location: 12,
                    },
                    relkind: Table,
                    missing_ok: false,
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                36,
            ),
        },
    ],
)
