parser/src/snapshots/squawk_parser__parse__tests__regression_update_table.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterTableStmt(
                    AlterTableStmt {
                        cmds: [
                            AlterTableCmd(
                                AlterTableCmd {
                                    subtype: ColumnDefault,
                                    name: Some(
                                        "column_name",
                                    ),
                                    def: Some(
                                        TypeCast(
                                            Object({
                                                "arg": Object({
                                                    "A_Const": Object({
                                                        "location": Number(
                                                            73,
                                                        ),
                                                        "val": Object({
                                                            "String": Object({
                                                                "str": String(
                                                                    "f",
                                                                ),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                                "location": Number(
                                                    -1,
                                                ),
                                                "typeName": Object({
                                                    "TypeName": Object({
                                                        "location": Number(
                                                            -1,
                                                        ),
                                                        "names": Array([
                                                            Object({
                                                                "String": Object({
                                                                    "str": String(
                                                                        "pg_catalog",
                                                                    ),
                                                                }),
                                                            }),
                                                            Object({
                                                                "String": Object({
                                                                    "str": String(
                                                                        "bool",
                                                                    ),
                                                                }),
                                                            }),
                                                        ]),
                                                        "typemod": Number(
                                                            -1,
                                                        ),
                                                    }),
                                                }),
                                            }),
                                        ),
                                    ),
                                    behavior: Restrict,
                                    missing_ok: false,
                                },
                            ),
                        ],
                        relation: RangeVar(
                            RangeVar {
                                catalogname: None,
                                schemaname: None,
                                relname: "table_name",
                                inh: true,
                                relpersistence: "p",
                                alias: None,
                                location: 21,
                            },
                        ),
                        relkind: Table,
                        missing_ok: false,
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    78,
                ),
            },
        ),
    ],
)
